--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,9 +16,8 @@
                 "Google.geminicodeassist",
                 "usernamehw.errorlens",
                 "formulahendry.auto-close-tag",
-                "formulahendry.auto-rename-tag",
-                "esbenp.prettier-vscode",
-                "dbaeumer.vscode-eslint"
+                "bradlc.vscode-tailwindcss",
+                "biomejs.biome"
             ]
         }
     }
